# consultant_info_generator

./: .env local  .env_local  README.md  prompts.toml  pyproject.toml  test_dimensions.json
consultant_info_generator/: config.py  consultant_info_tools.py  logger.py  model.py
consultant_info_generator/cli/: main.py
consultant_info_generator/model/: category.py  category_assignments.py  cv_summary.py  industry_name.py  model.py  questions.py
consultant_info_generator/service/: category_assigner.py  category_extraction.py  category_value_deduplication.py  consultant_chat_preparation.py  consultant_import.py  cv_summary.py  date_support.py  dimension_assigner.py  dimension_extraction.py  industry_name_extraction.py  persistence_service_consultants_async.py  prompt_factory.py  query_support.py  question_generation.py  question_order.py
data/: categories.json  profile_category_assignments.json  profiles.txt  questions.json
docs/: consultant_info_loader.bpmn
prompts/: main.toml
scripts/: import_all.ps1  import_all.sh
sql/: db_creation.sql  db_session_tables.sql  db_setup.sql  db_views.sql  dummy_data.sql
tests/: test_category_assigner.py  test_category_extraction.py  test_config.py  test_consultant_chat_preparation.py  test_consultant_info_tools.py  test_cv_summary.py  test_dimension_extraction.py  test_question_generation.py
tests/provider/: category_provider.py  category_questions_provider.py  consultant_category_item_assignment_provider.py  consultant_provider.py  linkedin_profiles.py
tests/service/: test_category_value_deduplication.py  (+1 more)
(+10 files in other folders)
