[project]
name = "consultant-info-generator"
version = "0.1.4"
description = ""
authors = [
    {name = "Gil Fernandes",email = "gil.fernandes@onepointltd.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "click>=8.1.7",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.19",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.7",
    "linkedin-api (>=2.3.1,<3.0.0)",
    "psycopg>=3.2.5",
    "pydantic (==2.27.2)",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "tomli>=2.2.1",
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2"
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

